# e-pooyasokhan-com-lcms

./: .gitignore  CMakeLists.txt  README.md  build-config.cmake  definitions.cmake  dependencies.cmake  deploy.cmake  product-info.cmake  resources.cmake  source-files.cmake
CMakeModules/: FindLibB64.cmake  FindZeroMQ.cmake
EPSAdmin/: CMakeLists.txt  main.cpp  splashscreen.cpp
EPSAdmin/resources/: app.rc  resources.qrc
EPSDesktop/: CMakeLists.txt  application.cpp  application.hpp  audioconverter.cpp  audioconverter.hpp  audioplayer.cpp  audioplayer.hpp  audiorecorder.cpp  audiorecorder.hpp  loading.cpp  loading.hpp  loginwindow.cpp  loginwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  rt.cpp  rt.hpp  splashscreen.cpp  splashscreen.hpp  versioninfo.hpp
EPSDesktop/resources/: app.rc  loading.qml  loginwindow.qml  mainwindow.qml  resources.qrc  splashscreen.qml
EPSServer/: CMakeLists.txt  backend.cpp  backend.hpp  dbtables.cpp  dbtables.hpp  main.cpp  rt.cpp  rt.hpp  versioninfo.cpp  versioninfo.hpp
EPSServer/resources/: app.rc
EPSStudent/: CMakeLists.txt  main.cpp  splashscreen.cpp  splashscreen.hpp
EPSStudent/qml/: mainwindow.qml
EPSStudent/resources/: app.rc  resources.qrc  splashscreen.qml
EPSTeacher/: CMakeLists.txt  main.cpp  splashscreen.hpp
EPSTeacher/resources/: app.rc
MyLib/: CMakeLists.txt  compression.cpp  compression.hpp  crypto.cpp  crypto.hpp  db.cpp  db.hpp  exception.cpp  exception.hpp  ipcclient.cpp  ipcclient.hpp  ipcprotocol.cpp  ipcprotocol.hpp  ipcrequest.cpp  ipcrequest.hpp  ipcresponse.cpp  ipcresponse.hpp  ipcserver.cpp  ipcserver.hpp  log.cpp  log.hpp  mail.cpp  mail.hpp  main.cpp  mylib.hpp  system.cpp  system.hpp
Resources/: eps-admin.rc  eps-server.rc  eps-student.rc  eps-teacher.rc
_build-srcipts/: freebsd-gcc46.sh  mingw-GCCMinSizeRel.cmd  mingw-debug.cmd
_deps-win32-build-instructions/: b64.txt  boost.txt  cppdb.txt  cryptopp.txt  geoip.txt  openssl.txt  sqlite.txt  vmime.txt  zeromq.txt  zlib.txt
_win32-portable/: native_launcher-build.bat  native_launcher.cpp  native_launcher.rc  nsis_launcher.nsi
