IF ( BUILD_EPS_DESKTOP )
    FILE ( GLOB EPS_DESKTOP_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp resources/*.qml resources/*.js )

    SET ( EPS_DESKTOP_BIN_FILE "${EPS_DESKTOP_BIN_NAME}" )

    SET ( CMAKE_AUTOMOC ON )
    SET ( CMAKE_INCLUDE_CURRENT_DIR ON )

    FIND_PACKAGE( Qt5Core REQUIRED )

    QT5_ADD_RESOURCES ( EPS_DESKTOP_QRCS ${EPS_DESKTOP_QRC_FILE} )

    IF ( NOT WIN32 AND NOT MINGW )
        ADD_EXECUTABLE ( ${EPS_DESKTOP_BIN_FILE} ${QT_GUI_TYPE} ${EPS_DESKTOP_QRCS} ${EPS_DESKTOP_SOURCE_FILES} )    
    ELSE (  )
        SET ( CMAKE_RC_COMPILER_INIT windres )
        ENABLE_LANGUAGE( RC )
        SET ( CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> <FLAGS> -O coff <DEFINES> -i <SOURCE> -o <OBJECT>")
        ADD_EXECUTABLE ( ${EPS_DESKTOP_BIN_FILE} ${QT_GUI_TYPE} ${EPS_DESKTOP_QRCS} ${EPS_DESKTOP_SOURCE_FILES} ${EPS_DESKTOP_RC_FILE} )
    ENDIF (  )

    QT5_USE_MODULES( ${EPS_DESKTOP_BIN_FILE} Multimedia Quick Widgets )

    FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
        SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE}
            APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
    ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

    TARGET_LINK_LIBRARIES ( ${EPS_DESKTOP_BIN_FILE}
        ${MYLIB_BIN_NAME}
        ${Boost_LIBRARIES}
    )
    
    IF ( IS_DEBUG_BUILD )
        SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "DEBUG_BUILD" )
    ENDIF(  )

    IF ( DEFINED EPS_DESKTOP_DEFINES )
        SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "${EPS_DESKTOP_DEFINES}" )
    ENDIF (  )

    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_COMPILER=\"${PRODUCT_BUILD_COMPILER}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_HOST=\"${PRODUCT_BUILD_HOST}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_PROCESSOR=\"${PRODUCT_BUILD_PROCESSOR}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_BUILD_SYSTEM=\"${PRODUCT_BUILD_SYSTEM}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT_HOLDER=\"${EPS_DESKTOP_COPYRIGHT_HOLDER}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_COPYRIGHT_YEAR=\"${EPS_DESKTOP_COPYRIGHT_YEAR}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_DEVELOPER=\"${EPS_DESKTOP_DEVELOPER}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_PRODUCT_NAME=\"${EPS_DESKTOP_PRODUCT_NAME}\"" )
    SET_PROPERTY ( TARGET ${EPS_DESKTOP_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "PRODUCT_PRODUCT_VERSION=\"${EPS_DESKTOP_PRODUCT_VERSION}\"" )

    GET_PROPERTY( EPS_DESKTOP_EXECUTABLE TARGET ${EPS_DESKTOP_BIN_FILE} PROPERTY LOCATION )

    IF ( CXX_GCC AND GCC_STRIP_EXECUTABLE )
        ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
            POST_BUILD
            COMMAND strip ${EPS_DESKTOP_EXECUTABLE}
            COMMAND strip -R.comment ${EPS_DESKTOP_EXECUTABLE}
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
    ENDIF (  )

    IF ( WIN32 AND MINGW )
        GET_PROPERTY( MYLIB_LIBRARY_PATH TARGET ${MYLIB_BIN_NAME} PROPERTY LOCATION )

        ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${MYLIB_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_FILESYSTEM_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_SYSTEM_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${BOOST_THREAD_LIBRARY_PATH}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CPPDB_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CPPDB_SQLITE3_DRIVER}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CRYPTOPP_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${LIBB64_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${SQLITE3_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${ZEROMQ_LIBRARY}" "${CMAKE_CURRENT_BINARY_DIR}"
        )

        FOREACH ( TARGET_FILE ${MINGW_CPP_RUNTIME_FILES} )
            ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
           "${QT5_LIBRARY_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}"
        )
        ENDFOREACH( TARGET_FILE ${MINGW_CPP_RUNTIME_FILES} )

        FOREACH ( TARGET_DIR ${QT5_WIN32_MINGW_DEPLOY_DESTINATION_DIRS} )
            ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E make_directory
            "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}"
        )
        ENDFOREACH( TARGET_DIR ${QT5_WIN32_MINGW_DEPLOY_DESTINATION_DIRS} )

        FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_BIN_DIR_FILES} )
            ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
           "${QT5_LIBRARY_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}"
        )
        ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_BIN_DIR_FILES} )

        IF ( IS_DEBUG_BUILD )
            FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_BIN_DIR_FILES_DEBUG} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_LIBRARY_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}"
            )
            ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_BIN_DIR_FILES_DEBUG} )

            FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_PLUGINS_DIR_FILES_DEBUG} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_PLUGINS_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}"
            )
            ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_PLUGINS_DIR_FILES_DEBUG} )
        ELSE (  )
            FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_BIN_DIR_FILES_RELEASE} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_LIBRARY_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}"
            )
            ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_BIN_DIR_FILES_RELEASE} )

            FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_PLUGINS_DIR_FILES_RELEASE} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_PLUGINS_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}"
            )
            ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_PLUGINS_DIR_FILES_RELEASE} )
        ENDIF(  )

        FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_QML_DIR_FILES} )
            ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
            POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
           "${QT5_QML_MODULES_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}"
        )
        ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_QML_DIR_FILES} )

        IF ( IS_DEBUG_BUILD )
            FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_QML_DIR_FILES_DEBUG} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_QML_MODULES_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}"
            )
            ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_QML_DIR_FILES_DEBUG} )
        ELSE (  )
            FOREACH ( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_QML_DIR_FILES_RELEASE} )
                ADD_CUSTOM_COMMAND ( TARGET ${EPS_DESKTOP_BIN_FILE}
                POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
               "${QT5_QML_MODULES_PATH}/${TARGET_FILE}" "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_FILE}"
            )
            ENDFOREACH( TARGET_FILE ${QT5_WIN32_MINGW_DEPLOY_QML_DIR_FILES_RELEASE} )
        ENDIF(  )
    ENDIF (  )
ENDIF (  )


